# test_actions_qt

./: CMakeLists.txt  LICENSE
.github/workflows/: build.yml
